copy from daominah/yugioh_card_editor/web v0.1.4

--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
           <hr>
 
           <div style="margin-top: 32px">
+            <span id="ExportCardJSONName" style="font-size: 20px; font-family: monospace"> </span>
             <button id="ExportCardJSON" class="sameWidthElement bigBtn"
                     onclick="exportCardJSON()">
               Export card as JSON (without art)
@@ -398,7 +399,7 @@
           </button>
         </div>
         <div class="smallNote">(search in card name)</div>
-        <div id="SearchCardResult" style="font-size: 28px"></div>
+        <div id="SearchCardResult" class="searchCardResult"></div>
       </div>
 
 
