handle Token (similar to Monster)

--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
       <div id="CardTypeWrap">
         <h3>Type: </h3>
         <input type="radio" name="CardType" id="Monster"/>
-        <label for="Monster">Monster   </label>
+        <label for="Monster">Monster  </label>
         <input type="radio" name="CardType" id="Spell"/>
-        <label for="Spell">Spell     </label>
+        <label for="Spell">Spell    </label>
         <input type="radio" name="CardType" id="Trap"/>
-        <label for="Trap">Trap      </label>
+        <label for="Trap">Trap     </label>
+        <input type="radio" id="Token" name="CardType">
+        <label for="Token">Token</label>
       </div>
 
       <div id="CardSubtypeWrap">
