feature: select alternative artwork

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!-- main -->
   <script type="text/javascript" src="konami_data/konami_db_en.js"></script>
+  <script type="text/javascript" src="konami_data/alt_arts.js"></script>
   <script type="text/javascript" src="index.js"></script>
 
   <!--
@@ -119,6 +120,13 @@
       <div>
         <h3>Art: </h3>
         <input id="CardArt" type="file" accept="image/*">
+      </div>
+
+      <div id="AltArtSection" style="min-height: 24px;">
+        <h3 id="AltArtLabel" style="display: inline;">Alt arts: </h3>
+        <div id="AltArtSelector" style="display: inline;">
+          <!-- Alt art radio buttons will be generated here -->
+        </div>
       </div>
 
       <div>
